# chess-study-assistant

./: PGNReader.py  README.md  eda.ipynb  pyproject.toml
